...
     <item>@string/set_btm_nav_4</item>
    <item>@string/set_btm_nav_3</item>

    </string-array>

    <string-array name="set_btm_nav_values">
        <item>@string/set_btm_nav_value_1</item>
        <item>@string/set_btm_nav_value_4</item>
        <item>@string/set_btm_nav_value_3</item>
    </string-array>

    <string name="set_btm_nav_value_default" translatable="false">@string/set_btm_nav_value_3</string>
    <string name="set_btm_nav_value_1" translatable="false">bottom</string>
    <string name="set_btm_nav_value_2" translatable="false">bottom_menu</string>
    <string name="set_btm_nav_value_3" translatable="false">never</string>
    <string name="set_btm_nav_value_4" translatable="false">bottom_only</string>


    <string-array name="set_detail_txt_list">
        <item>@string/set_detail_txt_small</item>
...
